# musinsa_sre

./: .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: gitleaks.yml
backend/: README.md  __init__.py  __main__.py  logging.py  settings.py
backend/services/iam/: dependency.py  lifetime.py  service.py
backend/web/: application.py  lifetime.py
backend/web/api/: router.py
backend/web/api/docs/: __init__.py  views.py
backend/web/api/health/: __init__.py  views.py
backend/web/api/iam/: __init__.py  schema.py  views.py
docs/: 00_mvp_design.md  01_backend_improvement_points.md  02_docker_secret_handling.md  03_endpoint_usage_guide.md  04_aws_api_rate_limit_handling.md  05_iam_credential_report_endpoint_design.md
k8s/: README.md  configmap.yaml  deployment.yaml  secret.yaml.sample  service.yaml
